Fixed favicon and background image paths

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 
   <!--Favicon-->
-  <link rel="shortcut icon" href="{% static 'favicon/favicon.png' %}" />
+  <link rel="icon" href="static/favicon/favicon.png" type="image/png">
 
   <!-- Compiled and minified JavaScript -->
   <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
@@ -51,7 +51,7 @@
 
     
     .parallax{
-      background-image:url( "{% static 'Images/red-bg.jpg' %}");
+      background-image: url("static/Images/red-bg.jpg");
       min-height:auto; 
       background-attachment: fixed;
       background-position: center;
